--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,51 @@
-site_name: My Docs
-site_name: Tecnologias Hacker
+site_name: 'Tecnologias Hacker – 2025/2'
+site_url: https://joaoluisi.github.io/tecnologias-hacker/
+
 theme:
   name: material
+  custom_dir: material/overrides
+  features:
+    - navigation.tabs
+    - navigation.instant
+    - navigation.social
+    - content.code.copy
+    - search.suggest
+    - search.highlight
+  palette:
+    - scheme: default
+      primary: teal
+      accent: purple
+  icon:
+    logo: material/book
+
+repo_url: https://github.com/joaoluisi/tecnologias-hacker
+repo_name: joaoluisi/tecnologias-hacker
+
+extra:
+  announcement: '[**Site Insper**](https://insper.edu.br)'
+  social:
+    - icon: fontawesome/solid/university
+      link: https://insper.edu.br
+  generator: false
+
+extra_css:
+  - assets/stylesheets/main.css
+  #  - assets/home.css
+  - css/extra.css
+
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+
+nav:
+  - Home: index.md
+  - Roteiros:
+      - Orientações Gerais dos Roteiros: roteiros/index.md
+      - Roteiro 1 Port Scan: roteiros/1.portscan.md
+  - Tutoriais: tutoriais/index.md
+  - Plano de Aula: plano/index.md
+  #- Projeto: projeto/index.md
+  - Ferramentas:
+      - NMAP: ferramentas/nmap.md
+  #- Conteúdo adicional: conteudo/index.md
